# kookaburra

./: .gitignore  .readthedocs.yml  LICENSE.md  README.md  README.rst  codecov.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: Makefile  requirements.txt
docs/source/: conf.py  data.rst  flux-models.rst  index.rst  kb_create_database.rst  kb_single_pulse.rst
examples/: README.md  RUNME.sh  demo.ipynb  make_fake_data.py
paper/: paper.bib  paper.md
src/: __init__.py  data.py  database.py  flux.py  flux_model.py  likelihood.py  plot.py  priors.py  single_pulse.py
src/kookaburra/: __init__.py  data.py  flux.py  plot.py  priors.py
tests/: data_test.py  flux_test.py
